# CiC

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: simple_chat.py  smart_routing.py  tool_use_agent.py
src/cic/: __init__.py  client.py  exceptions.py  routing.py  types.py  utils.py
tests/: test_client.py  test_nonhybrid.py  test_routing.py  test_types.py  test_utils.py
