[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cic"
version = "0.1.0"
description = "Context in Claude Code — Build AI agents using your Claude subscription"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Gavin Yap"},
]
keywords = ["claude", "ai", "agent", "llm", "anthropic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# CiC has zero runtime dependencies — it only uses stdlib.
# The claude CLI is an external prerequisite, not a Python package.
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.urls]
Homepage = "https://github.com/maclarensg/CiC"
Repository = "https://github.com/maclarensg/CiC"
Issues = "https://github.com/maclarensg/CiC/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/cic"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]
